
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int BANSTART ;
 int BANSTOP ;
 int BUFF ;
 int errbuff () ;
 int errsplo () ;
 int printf (char*,...) ;
 int putchar (char) ;
 int read (int,char*,int) ;
 int * strstr (char*,int ) ;

void readout(int sock, char *argv[]){

int i=0, flag;
char output[BUFF], tmp;
printf("[*] Output by %s:\n\n",argv[1]);

while(strstr(output,BANSTART) == ((void*)0)){
flag = read(sock,&tmp,1);
output[i++] = tmp;
if(i >= BUFF)
  errbuff();
if(flag==0)
  errsplo();
}
while(strstr(output,BANSTOP) == ((void*)0)){
read(sock,&tmp,1);
output[i++] = tmp;
putchar(tmp);
if(i >= BUFF)
  errbuff();
}
printf("\n\n");

}
